# Master-Thesis-Spring-2022

./: .gitignore  Check_matrix_least_squares_log_15_02_2022_kl_13_17  DR_snapshots_for_mls_order_analysis_log.txt  DR_snapshots_for_mls_order_analysis_log2.txt  LICENSE  LICENSE-Specialization-Project-fall-2021  README.md  assembly_neumann.py  base_assembly.py  check_error_computer.py  check_fem_quadrilateral_solvers.py  check_lamdify.py  check_matrix_least_squares.py  check_orthogonalizaton_of_1_over_x_using_pv.py  check_pod.py  default_constants.py  fem_quadrilateral_classes.py  gauss_quadrature.py  helpers.py  index_functions.py  make_plots_DR_snapshots_for_mls_order_analysis.py  matrix_least_squares.py  patch_test1_DC.py  patch_test1_QS.py  patch_test1_SR.py  pod.py  requirements.txt  setup.cfg  setup.py  solution_function_class.py
DR_final_analysis/: check_pod_alg.py  get_hf_error.py  log.txt  plot_displacment_and_von_mises.py  save_DR_snapshots_multi.py  save_hf_error.py  save_log.txt  save_mls_and_rb_model.py  save_pod_errors.py  time_code.py  time_code_log_n90.txt
DR_final_analysis_large_11/: save_DR_snapshots_multi.py  save_hf_error.py  save_mls_and_rb_model.py  save_pod_errors.py
DR_mls_analysis/: make_error_plots.py  make_plots_DR_snapshots_for_mls_order_analysis.py  make_plots_DR_snapshots_for_mls_order_analysis_2.py  make_pod_plots.py  save_DR_snapshots_for_mls_order_analysis.py
DR_mls_analysis_2/: make_error_plots.py  make_plots_DR_snapshots_for_mls_order_analysis.py  make_plots_DR_snapshots_for_mls_order_analysis_2.py  make_pod_plots.py  run_all.py  (+2 more)
(+177 files in other folders)
