[metadata]
name = Master-Thesis-Spring-2022
version = 1.0.0
author = Olav M. S. Gran
# for now, until June 2022, will be updated
author_email = omgran@stud.ntnu.no
description = Code for building a reduced order model for the linear elasticity equation on a square in 2D
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OlavMSG/Master-Thesis-Spring-2022
project_urls =
    Code = https://github.com/OlavMSG/Master-Thesis-Spring-2022
    Bug Tracker = https://github.com/OlavMSG/Master-Thesis-Spring-2022/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics
keywords =
    mathematics
    finite element methods
    reduced order modeling
    reduced basis
    linear elasticity

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1
    scipy>=1.
    sympy>=1
    tqdm>=4
    matplotlib>=3
    quadpy>=0.16.10
    symengine>=0.9.0

zip_safe = no

[options.packages.find]
where = src